# brydz_core

./: Cargo.toml
src/: deck.rs  error.rs  lib.rs  main.rs  meta.rs
src/amfi/: agent.rs  env.rs  mod.rs  policy.rs  side_id.rs  spec.rs
src/amfi/comm/: mod.rs
src/amfi/state/: action.rs  mod.rs  state_update.rs
src/amfi/state/agent/: dummy.rs  traits.rs
src/amfi/state/agent/all_knowing/: mod.rs  state.rs  state_tensor.rs
src/amfi/state/agent/assuming/: mod.rs  state.rs  state_tensor.rs
src/amfi/state/agent/fuzzy_card_set/: mod.rs
src/amfi/state/agent/simple/: mod.rs  state_tensor.rs
src/amfi/state/agent/tensor_convert/: converter420.rs  converter_sparse.rs  mod.rs  state_with_hist_conv.rs
src/amfi/state/env/: complete.rs  minimal.rs
src/amfi/state/neuro/: action_convert.rs  as_state_history_tensor.rs
src/amfi/test/: mod.rs
src/auction/: auction_field.rs  bid.rs  call.rs  contract.rs  declaration_storage.rs  mod.rs  parser.rs
src/bidding/: auction_field.rs  bid.rs  call.rs  contract.rs  declaration_storage.rs  history.rs  mod.rs  parser.rs
src/card/: cards.rs  figure.rs  mod.rs  parser.rs  suit.rs  trump.rs
src/card/usage_memory/: register.rs  standard_register.rs
src/cards/: card.rs  deck.rs  figure.rs  mod.rs  parser.rs  suit.rs  trump.rs
src/contract/: card_trackers.rs  collision.rs  deal.rs  maintainer.rs  mod.rs  randomizer.rs  registering_contract.rs  spec.rs  suit_exhaust.rs  trick.rs  trick_solver.rs
src/deal/: biased_hand_distribution.rs  collision.rs  compact_hand.rs  contract.rs  deal_distribution.rs  deck_distr_description.rs  hand.rs  hand_distribution.rs  hand_set.rs  hand_vector.rs  maintainer.rs  mod.rs  regdeal.rs  regeal.rs  stack_hand.rs  table.rs  trick.rs
src/distribution/: hand.rs  hand_distribution.rs  mod.rs
src/error/: bidding.rs  bridge.rs  comm.rs  contract.rs  correctness.rs  deal.rs  distribution.rs  flow.rs  format.rs  fuzzy_card_set.rs  hand.rs  mod.rs  score.rs  trick.rs
src/overseer/: mod.rs  simple.rs  status.rs
src/play/: auction.rs  auction_field.rs  axis.rs  card_trackers.rs  contract.rs  deal.rs  deck.rs  exhaust.rs  mod.rs  rewards.rs  score.rs  trick.rs  trump.rs
src/player/: mod.rs  player_instance.rs  role.rs  side.rs  side_map.rs  situation.rs
src/protocol/: mod.rs
src/protocol/v0/: client.rs  controller.rs  mod.rs  server.rs  test.rs
src/protocol/v0/control/: mod.rs
src/protocol/v0/information/: api_resource.rs  mod.rs  response.rs
src/protocol/v1/: action.rs  mod.rs
src/protocol/v1/information/: api_resource.rs  mod.rs  request.rs
src/score/: bridge_score.rs  calculation.rs  mod.rs  rubber_score.rs  score.rs  score_table.rs  sport.rs
src/score/tables/: contracted.rs  mod.rs  overtricks.rs  penalties.rs  premium.rs  slam.rs
src/sztorm/: agent.rs  env.rs  mod.rs  policy.rs  side_id.rs  spec.rs
src/sztorm/comm/: mod.rs
src/sztorm/state/: action.rs  contract_state.rs  mod.rs  state_update.rs
src/sztorm/state/agent/: dummy.rs  hand_info.rs  minimal.rs  mod.rs  renewable_state.rs  simple.rs  traits.rs
src/sztorm/state/agent/all_knowing/: state.rs  state_tensor.rs
src/sztorm/state/agent/assuming/: mod.rs  state.rs  state_history_tensor.rs  state_tensor.rs
src/sztorm/state/agent/fuzzy_card_set/: card_probability.rs  mod.rs  parse.rs  serde.rs
src/sztorm/state/agent/simple/: mod.rs  state_history_tensor.rs  state_tensor.rs
src/sztorm/state/agent/tensor_convert/: converter.rs  converter420.rs  converter_sparse.rs  mod.rs  state_with_hist_conv.rs
src/sztorm/state/env/: complete.rs  minimal.rs
src/sztorm/state/neuro/: action_convert.rs  as_state_history_tensor.rs  mod.rs
src/sztorm/test/: mod.rs
src/sztorm/world/: contract.rs
src/tur/: agent.rs  env.rs  mod.rs  side_id.rs  spec.rs
src/tur/comm/: mod.rs
src/tur/state/: contract_state.rs  state_update.rs
src/tur/state/agent/: dummy.rs  minimal.rs  mod.rs
src/tur/state/env/: minimal.rs  mod.rs
src/tur/test/: mod.rs
src/world/: _simple.rs  mod.rs  status.rs
src/world/agent/: deal_agent.rs  dummy.rs  mod.rs
src/world/comm/: mod.rs  std_channel.rs  tokio_channel.rs
src/world/dummy/: mod.rs
src/world/environment/: channel.rs  deal_env_rr.rs  mod.rs  round_robin.rs  rr_env.rs
