[package]
name = "brydz_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.136", features = ["derive"], optional = true}
serde_json = {version = "1.0.79"}
rand = "0.8.5"
itertools = "0.11.0"
arrayvec = {version = "0.7.2", features = ["serde"]}
ron = {version = "0.8.0" , optional = true}
nom = "7.1.0"
karty = {path = "../karty", features = ["register", "parse", "speedy", "serde", "random", "parse"]}
log = {version = "0.4.17", optional = true}
parking_lot = {version = "0.12.1", optional = true}
speedy = {version = "0.8.6", optional =true}
tokio = {version = "1.21.1", features = ["net", "rt", "rt-multi-thread", "io-util", "sync"], optional = true}
postcard = {version = "1.0.2", optional = true}
amfi = {path = "../amfi", features = ["serde"] , optional = true}
amfi_rl = {path = "../amfi_rl", optional = true}
smallvec = {version = "1.10.0", optional = true}
num-rational = {version = "0.4.1", optional = true}
serde-big-array = "0.5.1"
tch = {version = "0.14.0", optional = true}
approx = "0.5.1"
thiserror = "1.0.40"
statrs = {version = "0.16.0"}


[features]

speedy = ["dep:speedy"]
serde = ["dep:serde", "parse"]
serde_derive = ["dep:serde", "serde", "dep:ron"]
serde_dedicate = ["dep:serde", "serde", "dep:ron"]
serde_ron = ["dep:serde", "serde", "dep:ron"]
amfi = ["dep:amfi", "dep:smallvec", "dep:log", "dep:num-rational"]
neuro = ["dep:amfi_rl", "dep:tch", "amfi"]
parse = []

