[package]
name = "brydz_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.195", features = ["derive"], optional = true}
serde_json = {version = "1.0.111"}
rand = "0.8.5"
itertools = "0.12.0"
arrayvec = {version = "0.7.4", features = ["serde"]}
ron = {version = "0.8.1" , optional = true}
nom = "7.1.3"
karty = {path = "../karty", features = ["register", "parse", "speedy", "serde", "random", "parse"]}
log = {version = "0.4.20", optional = true}
parking_lot = {version = "0.12.1", optional = true}
speedy = {version = "0.8.6", optional =true}
tokio = {version = "1.35.1", features = ["net", "rt", "rt-multi-thread", "io-util", "sync"], optional = true}
postcard = {version = "1.0.8", optional = true}
amfi_core = {path = "../amfi_core", features = ["serde"] , optional = true}
amfi_rl = {path = "../amfi_rl", optional = true}
smallvec = {version = "1.11.2", optional = true}
num-rational = {version = "0.4.1", optional = true}
serde-big-array = "0.5.1"
tch = {version = "0.14.0", optional = true}
approx = "0.5.1"
thiserror = "1.0.56"
statrs = {version = "0.16.0"}


[features]

speedy = ["dep:speedy"]
serde = ["dep:serde", "parse"]
serde_derive = ["dep:serde", "serde", "dep:ron"]
serde_dedicate = ["dep:serde", "serde", "dep:ron"]
serde_ron = ["dep:serde", "serde", "dep:ron"]
amfi = ["dep:amfi_core", "dep:smallvec", "dep:log", "dep:num-rational"]
neuro = ["dep:amfi_rl", "dep:tch", "amfi"]
parse = []

